Bot funcionando no telegram

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,16 @@ numpy = "*"
 pdfminer3 = "*"
 openpyxl = "*"
 flask = "*"
+tensorflow = "*"
+jupyterlab = "*"
+matplotlib = "*"
+scikit-learn = "*"
+tensorflow-datasets = "*"
+pydot = "*"
+graphviz = "*"
+jupyter = "*"
+pydotplus = "*"
+python-telegram-bot = "*"
 
 [requires]
 python_version = "3.7"
