--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ pandocfilters==1.4.2
 parso==0.5.2
 pdfminer3==2018.12.3.0
 pickleshare==0.7.5
+pip==19.3.1
 prometheus-client==0.7.1
 promise==2.3
 prompt-toolkit==3.0.2
