--- a/Pipfile
+++ b/Pipfile
@@ -6,15 +6,13 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-pip = ">=20"
 pandas = "*"
 requests = "*"
 nltk = "*"
 numpy = "*"
 pdfminer3 = "*"
 openpyxl = "*"
-tensorflow = "*"
-jupyterlab = "*"
+tensorflow = "<2.1"
 matplotlib = "*"
 scikit-learn = "*"
 tensorflow-datasets = "*"
@@ -22,6 +20,7 @@ pydot = "*"
 graphviz = "*"
 pydotplus = "*"
 python-telegram-bot = "*"
+flask = "*"
 
 [requires]
 python_version = "3.7"
